# sigmon

./: README.md  pyproject.toml
.github/workflows/: tests.yml
extra/hooks/: email.sh
extra/hooks/leaf_info/: http_plain
extra/hooks/match/: email.sh  pushover.sh
src/sigmon/: cli.py  monitor.py  sigsum.py  utils.py
tests/: test_consistency.py  test_merkle.py  test_quorum.py  test_sigsum.py
